--- a/Intents/AndroidManifest.xml
+++ b/Intents/AndroidManifest.xml
@@ -44,6 +44,7 @@
                 <action android:name="android.intent.action.AIRPLANE_MODE" />
 				<action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
 				<action android:name="android.intent.action.SERVICE_STATE"/>
+				<action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
             </intent-filter>
         </receiver>
     </application>
