--- a/EarthQuake/AndroidManifest.xml
+++ b/EarthQuake/AndroidManifest.xml
@@ -31,6 +31,7 @@
             android:name="com.naiaraodiaga.earthquake.EarthQuakeDetails"
             android:label="Details" >
         </activity>
+        <provider android:name=".MyQuakeProvider" android:permission="com.naiaraodiaga.provider.earthquakeprovider" android:authorities="com.naiaraodiaga.earthquake.authority"></provider>
     </application>
 
 </manifest>
