--- a/EarthQuakeContentProvider/AndroidManifest.xml
+++ b/EarthQuakeContentProvider/AndroidManifest.xml
@@ -11,9 +11,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:icon="@drawable/quake_launcher">
         <activity
             android:name="com.naiaraodiaga.earthquakecontentprovider.MainActivity"
             android:label="@string/app_name" >
