Alarma terminada y conexión a internet comprobada

--- a/EarthQuakeContentProvider/AndroidManifest.xml
+++ b/EarthQuakeContentProvider/AndroidManifest.xml
@@ -32,6 +32,11 @@
         </activity>
         <provider android:name=".MyContentProvider" android:authorities="com.naiaraodiaga.provider.earthquakecontentprovider"></provider>
         <service android:enabled="true" android:name=".QuakesDownloaderService" android:permission="com.naiaraodiaga.MY_SERVICE_PERMISSION"/>
+        <receiver android:name=".AlarmReceiver" >
+            <intent-filter>
+				<action android:name="com.naiaraodiaga.earthquake.alarmService"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
